--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.5",
     "nano": "^10.1.2",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "qs": "^6.11.2",
-    "sequelize": "^6.31.1",
+    "sequelize": "^6.32.0",
+    "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
